--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,3 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/asset_reader/gabung.css": "/asset_reader/gabung.css?id=1fd668a9a7a971d1d4d6"
 }
